--- a/style/pages/projects-details.css
+++ b/style/pages/projects-details.css
@@ -98,12 +98,6 @@
   gap: 2rem;
 }
 
-.projects-details .related-projects-list-item .more-users {
-  border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
-}
-
 /* Breakpoint-xl */
 @media (max-width: 1200px) {
   .projects-details .grid {
